--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -11,5 +11,16 @@ dependencies {
     compile 'com.beust:jcommander:1.48'
     compile 'com.thoughtworks.xstream:xstream:1.4.8'
     compile 'com.google.code.gson:gson:2.6.1'
-    
+}
+
+task testGroups(type: Test) {
+    useTestNG {
+        suites 'src/test/resouces/testng-groups.xml'
+    }
+}
+
+task testContacts(type: Test) {
+    useTestNG {
+        suites 'src/test/resouces/testng-contacts.xml'
+    }
 }
