--- a/addressbook-web-tests/build.gradle
+++ b/addressbook-web-tests/build.gradle
@@ -18,7 +18,7 @@ dependencies {
 
 task testGroups(type: Test) {
     useTestNG {
-        suites 'src/test/resouces/testng-groups.xml'
+        suites 'src/test/resources/testng-groups.xml'
     }
     if (project.hasProperty('browser')) {
         systemProperty 'browser', "${browser}"
@@ -33,7 +33,7 @@ task testGroups(type: Test) {
 
 task testContacts(type: Test) {
     useTestNG {
-        suites 'src/test/resouces/testng-contacts.xml'
+        suites 'src/test/resources/testng-contacts.xml'
     }
     if (project.hasProperty('browser')) {
         systemProperty 'browser', "${browser}"
@@ -44,4 +44,8 @@ task testContacts(type: Test) {
     if (project.hasProperty('verifyUI')) {
         systemProperty 'verifyUI', "${verifyUI}"
     }
+}
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
 }
